--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "aos": "^2.3.4",
+    "axios": "^1.7.3",
+    "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-icons-kit": "^2.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.24.0",
     "react-scroll": "^1.9.0",
-    "react-transition-group": "^4.4.5"
+    "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
