--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "serve-json": "json-server --watch db.json --port 4000"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
