--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"  // Add this if you have custom types here
+    ]
+  }
 }
